# McAN

./: CMakeLists.txt  LICENSE  README.md
convert/: README.md  Readme.md  variant_mark.pl
example/: run.sh
example/data/: meta  mut
example/out_example/: haplotype_loci.graphml  haplotype_loci.json  siteMask  time
src/: calcDist.c  calcDist_thread.cpp  countryDistribution.c  findHap.c  hapNetAll.c  hapNetDirected.c  main.c  main_siteMask.c  networkAnalysis.c  opt.c  output.c  vcf2mut.cpp  writeJson.c
src/IO/: anaMetaMut.c  readMeta_acc2line_hash.c  readMetadata.c  readMut_acc2line_hash.c  readMutations.c  show_all.c
src/compare/: compare.c
src/struct/: Hashmap_acc2line.h  edges.c  edges.h  haplotype.c  haplotype.h  indel.h  mutation.c  mutation.h  virus.c  virus.h
src/tool/: calcDate.c  chomp.c  emptyStr.c  findSubstr.c  optionparser.cpp  optionparser.h  queue.c  queue.h  unionFind.c
